Clean up easy deprecation warnings from GitHub Actions summary and code quality scanning (#6371)
* Clean up easy deprecation warnings

Replace deprecated commons-lang3 StringUtils/RandomStringUtils/LevenshteinDistance calls,
Charsets, Gson JsonParser, new URL(String), DefaultCredentialsProvider.create(),
@ApiModelProperty(readOnly) and @Schema(required) with their recommended replacements.

* Potential fix for pull request finding 'Dereferenced variable may be null'
* Fix CI build findings: logback mismatch, poisoned Broad POMs, liquibase config

- Align logback-core 1.5.38 with logback-access 2.0.13 (the release built against it)
- Override the retired Broad Artifactory repository ids declared by cromwell POMs,
  which serve an HTML page that was being cached in place of missing POMs
- Bump the CircleCI m2 cache key to evict the poisoned POM
- Drop the deprecated liquibase-maven-plugin logging parameter
- Use the Maven wrapper in propose_migration.sh

* Fix two format-string bugs flagged by GitHub Code Quality

- LimitedSourceFileBuilder: use %d instead of %n so the large-file log includes the byte count
- GitHubSourceCodeRepo.getTopic: pass the IOException to the logger instead of as an unused format argument

* Fix test issues flagged by GitHub Code Quality

- Close ZipFiles with try-with-resources in WorkflowIT and ZipSourceFileHelperTest
- Use correct generic types for the DAG map in WorkflowIT
- Record generated identifiers in AdvancedIndexingBenchmarkIT so the duplicate check works, and drop an always-true assert

* Add missing @Override annotations flagged by GitHub Code Quality

* Remove unused test locals flagged by GitHub Code Quality, adding missing assertions

Drops unused API clients/values, keeps calls whose side effects matter, and adds
assertions where a fetched value was never checked (GeneralWorkflowRegressionIT count2,
ExtendedMetricsTRSOpenApiIT allPlatformsMetrics, Ga4GhTRSAPIWorkflowIT toolFiles) or where
an expected-error lookup had no fail()